migration to anthropic with working querying

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-# Hugging Face API Key
-HUGGINGFACE_API_KEY= 
+# API Keys
+# Hugging Face API Key (legacy)
+# HUGGINGFACE_API_KEY=
+
+# OpenAI API Key (legacy)
+# OPENAI_API_KEY=
+
+# Anthropic API Key
+ANTHROPIC_API_KEY=
