--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,3 @@
 # API Keys
-# Hugging Face API Key (legacy)
-# HUGGINGFACE_API_KEY=your_huggingface_api_key_here
-
-# OpenAI API Key (legacy)
-# OPENAI_API_KEY=your_openai_api_key_here
-
-# Anthropic API Key
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+DATABASE_PATH=data/ucla_wbb.db
